[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/paddle.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Pong.gd" type="Script" id=2]
[ext_resource path="res://pong_assets/separator.png" type="Texture" id=3]
[ext_resource path="res://pong_assets/ball.png" type="Texture" id=4]
[ext_resource path="res://pong_assets/left_pallete.png" type="Texture" id=5]
[ext_resource path="res://pong_assets/right_pallete.png" type="Texture" id=6]
[ext_resource path="res://pong_assets/impactMetal_light_000.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scripts/ball.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="left" type="Area2D" parent="."]
position = Vector2( 67, 183 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="left"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
shape = SubResource( 1 )

[node name="right" type="Area2D" parent="."]
position = Vector2( 573, 187 )
script = ExtResource( 1 )
player_index = 1

[node name="Sprite" type="Sprite" parent="right"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
shape = SubResource( 2 )

[node name="separator" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 320, 200 )

[node name="ball" type="Area2D" parent="."]
position = Vector2( 320, 200 )
script = ExtResource( 8 )
speed = Vector2( 250, 30 )

[node name="Sprite" type="Sprite" parent="ball"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ball"]
stream = ExtResource( 7 )

[node name="ScoreLeft" type="RichTextLabel" parent="."]
margin_left = 253.0
margin_top = 1.0
margin_right = 272.0
margin_bottom = 16.0
rect_scale = Vector2( 3, 3 )
fit_content_height = true

[node name="ScoreRight" type="RichTextLabel" parent="."]
margin_left = 375.0
margin_top = 1.0
margin_right = 391.0
margin_bottom = 16.0
rect_scale = Vector2( 3, 3 )
fit_content_height = true

[node name="WinLabel" type="Label" parent="."]
visible = false
margin_left = 220.0
margin_top = 137.0
margin_right = 276.0
margin_bottom = 151.0
rect_scale = Vector2( 2.44673, 4.08511 )
text = "You Win!"
align = 1

[node name="Button" type="Button" parent="WinLabel"]
margin_left = 4.49582
margin_top = 13.4635
margin_right = 87.4958
margin_bottom = 33.4635
text = "Play Again?"

[connection signal="area_entered" from="ball" to="ball" method="_on_ball_area_entered"]
[connection signal="pressed" from="WinLabel/Button" to="." method="_on_Button_pressed"]
